--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Weekly Auto Merge
 on:
   schedule:
     # 17:00 every Thursday (UTC+7 = 10:00 UTC)
-    - cron: "1 * * * 4"
+    - cron: "1 * * * *"
     # 17:30 every Thursday (UTC+7 = 10:30 UTC)
     # - cron: "30 10 * * 4"
 
