--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         status: custom
         custom_payload: |
           {
-            "text": "@channel 🚀 Auto Merge Success",
+            "text": "<!channel> 🚀 Auto Merge Success",
             "attachments": [
               {
                 "color": "good",
@@ -137,7 +137,7 @@ jobs:
         status: custom
         custom_payload: |
           {
-            "text": "@channel ℹ️ Auto Merge Check - No Changes",
+            "text": "<!channel> ℹ️ Auto Merge Check - No Changes",
             "attachments": [
               {
                 "color": "#36a64f",
@@ -186,7 +186,7 @@ jobs:
         status: custom
         custom_payload: |
           {
-            "text": "@channel ⚠️ Auto Merge Failed",
+            "text": "<!channel> ⚠️ Auto Merge Failed",
             "attachments": [
               {
                 "color": "danger",
